@@ -121,6 +121,8 @@ Changes in version 1.3.1 (?? Mar 2007)
    deserializing the scene node.
 
  - Removed an array::erase from Octtrees and Octtree triangle selector.
+ 
+ - Removed a bug which caused irrlicht to crash when using animated .x files as static meshes.
 
 GUI:
 
